# Bicycle-routing

./: .gitignore  LICENCE.txt  README.md  requirements.txt
analysis/: README.md  map_creation.py  rendus.py  useful_fcts.py
analysis/modele_arx/: code_thomas.py  modele_arx.py
analysis/modele_markov/: TestModelMarkov.py
analysis/modele_segmentation/: clustering.py  hist_vitesses.py  kernel_density_estimation.ipynb  segmentation.py  useful_fcts.py
data/: README.md
data/GPX/: converter.py
data/maps/: altitude.html  clustering_d_500_seg_3.html  comparaison_GH_OSRM.html  exemple_MM.html  feu.html  feux.html  generator.py  reprojection_apres_MM.html  segmentation_500m.html  segmented_500.html  test_bend.html
pre-processing/: README.md  main.py
pre-processing/data_cleaning/: __init__.py  json_cleaning.py
pre-processing/data_interactions/: __init__.py  data_interactions.py
pre-processing/map_matching/: MM_GH.py  influence_mm_vitesse.py  projection_graphhopper.py  useful_fcts.py
pre-processing/variables_extraction/: __init__.py  calculate_azimuth.py  calculate_cumulated_dist.py  calculate_elevation.py  calculate_slope.py  calculate_speed.py  calculate_turns.py  detect_bend.py  rapport.py
routing-app/: README.md  pyproject.toml  requirements.txt
routing-app/application/: __init__.py
routing-app/application/python_scripts/: routing.py
routing-app/application/static/: style.css
routing-app/application/static/js/: script.js
routing-app/application/templates/: index.html
