[project]
name = "Projet_routage_velo"
version = "0.0.1"
authors = [
  { name="Alexandre Faure", email="alexandre.faure@student-cs.fr" },
]
description = "Site internet permettant de calculer un itinéraire à vélo avec une prise en compte des capcités physiques de l'utilisateur.ice."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]